--- a/ToDoList/Base.lproj/Main.storyboard
+++ b/ToDoList/Base.lproj/Main.storyboard
@@ -7,7 +7,46 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--ToDo List-->
+        <!--ToDo-->
+        <scene sceneID="gye-Ox-xKU">
+            <objects>
+                <tableViewController id="QhP-pD-u3O" customClass="CategoryTableViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="3qT-Hk-75V">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" id="ktJ-RJ-bRP">
+                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ktJ-RJ-bRP" id="5Va-YG-0cr">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="QhP-pD-u3O" id="I8j-bz-nfs"/>
+                            <outlet property="delegate" destination="QhP-pD-u3O" id="rs7-h2-eKt"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="ToDo" id="Mnf-Wq-Ypi">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Lle-mZ-5uX">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addCategory:" destination="QhP-pD-u3O" id="Dnt-Aj-rp9"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="3l5-d6-vrY" kind="show" identifier="GoToItems" id="ghu-kn-veO"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JAv-p7-UGb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="726" y="52"/>
+        </scene>
+        <!--Item-->
         <scene sceneID="MHQ-1e-d3S">
             <objects>
                 <tableViewController id="3l5-d6-vrY" customClass="ToDoListViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
@@ -38,7 +77,7 @@
                             <outlet property="delegate" destination="3l5-d6-vrY" id="SUe-9L-E82"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="ToDo List" id="3wc-ej-woB">
+                    <navigationItem key="navigationItem" title="Item" id="3wc-ej-woB">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="aoh-wL-3x6">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
@@ -49,7 +88,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zq5-wm-B29" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="731.8840579710145" y="51.5625"/>
+            <point key="canvasLocation" x="1684" y="52"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="bgN-UG-4ia">
@@ -66,7 +105,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="3l5-d6-vrY" kind="relationship" relationship="rootViewController" id="8Nl-sC-UUU"/>
+                        <segue destination="QhP-pD-u3O" kind="relationship" relationship="rootViewController" id="zvv-2n-BI1"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ekf-PS-FeD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
